# AlphaMatting

./: .gitignore  AlphaMattingCostFunctor.cpp  AlphaMattingCostFunctor.h  AlphaMattingLabelSpace.h  AlphaMattingProposalGenerator.cpp  AlphaMattingProposalGenerator.h  CMakeLists.txt  CostFunctor.h  FusionSpaceSolver.cpp  FusionSpaceSolver.h  ProposalGenerator.h  main.cpp
Statistics/: bopt.csv  bopt_1.csv  bopt_2.csv  bopt_3.csv  bopt_4.csv  bopt_5.csv  fusion_move.csv  fusion_move_1.csv  fusion_move_2.csv  fusion_move_3.csv  fusion_move_4.csv  fusion_move_5.csv  grid.csv  grid_1.csv  grid_2.csv  grid_3.csv  grid_4.csv  grid_5.csv  parallel_fusion_move.csv  parallel_fusion_move_1.csv  parallel_fusion_move_2.csv  parallel_fusion_move_3.csv  parallel_fusion_move_4.csv  parallel_fusion_move_5.csv  raw-time-v-energy-1.csv  raw-time-v-energy.csv  run_comparison_methods.sh  sf-mf.csv  sf-mf_1.csv  sf-mf_2.csv  sf-mf_3.csv  sf-mf_4.csv  sf-mf_5.csv  sf-ss.csv  sf-ss_1.csv  sf-ss_2.csv  sf-ss_3.csv  sf-ss_4.csv  sf-ss_5.csv  sf.csv  (+6 more)
