cmake_minimum_required(VERSION 2.6)
project (AlphaMatting)
find_package(OpenCV REQUIRED)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_FLAGS "-std=c++0x -w")
set(PROJECT_LINK_LIBS cv_utils.so)
link_directories(../cv_utils)
include_directories(../cv_utils)
file(GLOB SOURCES "*.cpp")
add_executable(AlphaMatting ${SOURCES} TRW_S/errorFn.cpp)
target_link_libraries(AlphaMatting ${OpenCV_LIBS})
target_link_libraries(AlphaMatting ${PROJECT_LINK_LIBS})
